line-smt-apis/force-app/main/default/objects/Promotion__c.object
<CustomObject>
    <fields>
        <fullName>CarModel__c</fullName>
        <label>車款</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CarStyle__c</fullName>
        <label>車型</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PowerType__c</fullName>
        <label>動力類型</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Drive-e 汽油車款</fullName>
                </value>
                <value>
                    <fullName>高效輕油電車款</fullName>
                </value>
                <value>
                    <fullName>雙能電動車款</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PromotionContent__c</fullName>
        <label>優惠內容</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PromotionMonth__c</fullName>
        <label>優惠月份</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PromotionYear__c</fullName>
        <label>優惠年份</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>狀態</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>啟用</fullName>
                </value>
                <value>
                    <fullName>停用</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SuggestedPrice__c</fullName>
        <label>建議售價</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YearType__c</fullName>
        <label>年式</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>當月優惠</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>PromotionYear__c</columns>
        <columns>PromotionMonth__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{00000000}</displayFormat>
        <label>優惠編號</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>