line-smt-apis/force-app/main/default/objects/Promotion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>PromotionYear__c</columns>
    <columns>PromotionMonth__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>